# pcLab

./: .gitignore  README.md  pyproject.toml
examples/: ex_baluns.py  ex_inductor_SE.py  ex_inductor_Sym.py  ex_inductor_SymCT.py  generic_5M.tech  layoutView.py
examples_SG13G2/: README.md  SG13G2.tech  balun_forEM.py  ex_baluns.py  ex_inductor_Sym.py  ex_inductor_SymCT.py  inductor_SE_by_value.py  inductor_SE_forEM.py  inductor_Sym_by_value.py  inductor_Sym_forEM.py
pclab/: __init__.py  indcalc.py  pclBalun.py  pclGeom.py  pclInductor.py  pclTech.py  pin2port.py
