[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pclab"
version = "0.1.0"
description = "Integrated Passive Component Layout Generator"
authors = [
    {name = "Dušan Grujić", email = "dusan.grujic@etf.bg.ac.rs"}
]
license = {text = "APACHE 2.0"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "gdspy",
]

[tool.setuptools]
packages = ["pclab"]